--- a/panhu-store/composer.json
+++ b/panhu-store/composer.json
@@ -24,6 +24,7 @@
         "drupal/console": "^1.0.2",
         "drupal/core": "~8.5.3",
         "drupal/devel": "^1.2",
+        "drupal/sendinblue": "^1.3",
         "drupal/ubercart": "^4.0@alpha",
         "drush/drush": "^9.0.0",
         "vlucas/phpdotenv": "^2.4",
